--- a/ゲーム制作プログラムファイル/GameProgramming/GameProgramming.vcxproj.filters
+++ b/ゲーム制作プログラムファイル/GameProgramming/GameProgramming.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="CMap.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="CBlock.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Update.h">
@@ -198,6 +201,9 @@
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="CMap.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="CBlock.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
