--- a/ゲーム制作プログラムファイル/GameProgramming/GameProgramming.vcxproj.filters
+++ b/ゲーム制作プログラムファイル/GameProgramming/GameProgramming.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="CBlock.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="CGoal.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Update.h">
@@ -204,6 +207,12 @@
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="CBlock.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="include\SOIL.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="CGoal.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
