--- a/ゲーム制作プログラムファイル/GameProgramming/GameProgramming.vcxproj.filters
+++ b/ゲーム制作プログラムファイル/GameProgramming/GameProgramming.vcxproj.filters
@@ -105,10 +105,13 @@
     <ClCompile Include="CMap.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="CBlock.cpp">
+    <ClCompile Include="CGoal.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="CGoal.cpp">
+    <ClCompile Include="CObstacle.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="CObstacleManager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -206,13 +209,16 @@
     <ClInclude Include="CMap.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="CBlock.h">
+    <ClInclude Include="CGoal.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="CObstacle.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="include\SOIL.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ソース ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="CGoal.h">
+    <ClInclude Include="CObstacleManager.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
