大きい障害物、動く障害物のクラス、タイトルを追加しました。

--- a/ゲーム制作プログラムファイル/GameProgramming/GameProgramming.vcxproj
+++ b/ゲーム制作プログラムファイル/GameProgramming/GameProgramming.vcxproj
@@ -56,6 +56,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>NotSet</SubSystem>
@@ -102,10 +103,13 @@
     <ClCompile Include="CMatrix.cpp" />
     <ClCompile Include="CModel.cpp" />
     <ClCompile Include="CObstacle.cpp" />
+    <ClCompile Include="CObstacleBig.cpp" />
     <ClCompile Include="CObstacleManager.cpp" />
+    <ClCompile Include="CObstacleMoving.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CSceneGame.cpp" />
     <ClCompile Include="CSceneManager.cpp" />
+    <ClCompile Include="CSceneTitle.cpp" />
     <ClCompile Include="CSound.cpp" />
     <ClCompile Include="CTaskManager.cpp" />
     <ClCompile Include="CText.cpp" />
@@ -137,11 +141,14 @@
     <ClInclude Include="CMatrix.h" />
     <ClInclude Include="CModel.h" />
     <ClInclude Include="CObstacle.h" />
+    <ClInclude Include="CObstacleBig.h" />
     <ClInclude Include="CObstacleManager.h" />
+    <ClInclude Include="CObstacleMoving.h" />
     <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CScene.h" />
     <ClInclude Include="CSceneGame.h" />
     <ClInclude Include="CSceneManager.h" />
+    <ClInclude Include="CSceneTitle.h" />
     <ClInclude Include="CSound.h" />
     <ClInclude Include="CTask.h" />
     <ClInclude Include="CTaskManager.h" />
