--- a/ゲーム制作プログラムファイル/GameProgramming/GameProgramming.vcxproj
+++ b/ゲーム制作プログラムファイル/GameProgramming/GameProgramming.vcxproj
@@ -96,6 +96,7 @@
     <ClCompile Include="CEffect.cpp" />
     <ClCompile Include="CEnemy.cpp" />
     <ClCompile Include="CEnemy2.cpp" />
+    <ClCompile Include="CFloor.cpp" />
     <ClCompile Include="CGoal.cpp" />
     <ClCompile Include="CKey.cpp" />
     <ClCompile Include="CMap.cpp" />
@@ -108,6 +109,9 @@
     <ClCompile Include="CObstacleMoving.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CSceneGame.cpp" />
+    <ClCompile Include="CSceneResult.cpp" />
+    <ClCompile Include="CSceneTutorial.cpp" />
+    <ClCompile Include="CSceneGameSelection.cpp" />
     <ClCompile Include="CSceneManager.cpp" />
     <ClCompile Include="CSceneTitle.cpp" />
     <ClCompile Include="CSound.cpp" />
@@ -134,6 +138,7 @@
     <ClInclude Include="CEffect.h" />
     <ClInclude Include="CEnemy.h" />
     <ClInclude Include="CEnemy2.h" />
+    <ClInclude Include="CFloor.h" />
     <ClInclude Include="CGoal.h" />
     <ClInclude Include="CKey.h" />
     <ClInclude Include="CMap.h" />
@@ -147,9 +152,12 @@
     <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CScene.h" />
     <ClInclude Include="CSceneGame.h" />
+    <ClInclude Include="CSceneGameSelection.h" />
     <ClInclude Include="CSceneManager.h" />
+    <ClInclude Include="CSceneResult.h" />
     <ClInclude Include="CSceneTitle.h" />
     <ClInclude Include="CSound.h" />
+    <ClInclude Include="CSceneTutorial.h" />
     <ClInclude Include="CTask.h" />
     <ClInclude Include="CTaskManager.h" />
     <ClInclude Include="CText.h" />
